# cis194-homework

homework1/hanoi/: README.md  hanoi.cabal  moves
homework1/hanoi/src/: Lib.hs
homework1/hanoi/test/: LibSpec.hs
homework1/verifyCreditCard/: README.md  verifyCreditCard.cabal
homework1/verifyCreditCard/src/: Lib.hs
homework1/verifyCreditCard/test/: LibSpec.hs
homework10/Parser/: Parser.cabal  README.md
homework10/Parser/app/: Main.hs
homework10/Parser/src/: AParser.hs
homework10/Parser/test/: ParserSpec.hs
homework11/: lesson-exercises.hs
homework11/Parser/: Parser.cabal
homework11/Parser/app/: Main.hs
homework11/Parser/src/: SExpr.hs
homework11/Parser/test/: SExprSpec.hs
homework12/: lesson-examples.hs
homework12/Risk/: README.md  Risk.cabal
homework12/Risk/src/: Lib.hs  Risk.hs
homework12/Risk/test/: LibSpec.hs
homework2/log-file-parsing/: README.md  log-file-parsing.cabal
homework3/golf/: README.md  golf.cabal
homework3/golf/src/: Golf.hs
homework3/golf/test/: GolfSpec.hs
homework4/folding-with-trees/: 2  README.md  folding-with-trees.cabal
homework4/map-as-fold/: README.md  map-as-fold.cabal
homework4/myFoldl/: README.md  myFoldl.cabal
homework4/myFoldl/src/: Lib.hs
homework4/sieveSundaram/: README.md  sieveSundaram.cabal
homework4/wholemeal-programming/: README.md  wholemeal-programming.cabal
homework4/xor/: README.md  xor.cabal
homework5/Calc/: Calc.cabal  README.md
homework6/fib/: README.md  fib.cabal
homework7/word-processor/: README.md  word-processor.cabal
homework8/Party/: Party.cabal  README.md
(+39 files in other folders)
